--- a/app/src/main/res/layout/fragment_lifecycle_log.xml
+++ b/app/src/main/res/layout/fragment_lifecycle_log.xml
@@ -1,22 +1,88 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:background="@android:color/white">
 
-    <TextView
-        android:id="@+id/textLogs"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:textColor="@android:color/black"
-        android:text="Logs do ciclo de vida aparecerão aqui" />
+        android:layout_height="match_parent"
+        android:background="@color/purple">
 
-    <Button
-        android:id="@+id/btnLimparLogs"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Limpar Logs" />
+        <!-- Header -->
+        <RelativeLayout
+            android:id="@+id/textLogHeader"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/purple"
+            android:padding="16dp"
+            android:layout_marginTop="50dp"
+            app:layout_constraintTop_toTopOf="parent">
 
-</LinearLayout>
+            <TextView
+                android:id="@+id/tituloHeaderApp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Log: Ciclo de Vida"
+                android:textColor="@color/white"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                android:fontFamily="@font/poppins"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"/>
+        </RelativeLayout>
+
+        <!-- CardView posicionado abaixo do Header -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardLogs"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_margin="16dp"
+            app:cardElevation="4dp"
+            app:cardCornerRadius="8dp"
+            android:background="@android:color/white"
+            app:layout_constraintTop_toBottomOf="@id/textLogHeader"
+            app:layout_constraintBottom_toTopOf="@id/btnLimparLogs"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="12dp">
+
+                <TextView
+                    android:id="@+id/textLogs"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:textColor="@android:color/black"
+                    android:text="Logs do ciclo de vida aparecerão aqui"
+                    android:lineSpacingExtra="4dp"
+                    android:padding="8dp" />
+
+            </ScrollView>
+
+        </androidx.cardview.widget.CardView>
+
+        <!-- Botão posicionado abaixo do CardView -->
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnLimparLogs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Limpar Logs"
+            android:textSize="16sp"
+            android:paddingVertical="10dp"
+            android:layout_marginVertical="24dp"
+            android:layout_marginHorizontal="16dp"
+            app:cornerRadius="8dp"
+            app:layout_constraintTop_toBottomOf="@id/cardLogs"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            app:backgroundTint="@color/white"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</FrameLayout>
